did Skills, still need to fix spacing a little

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,6 @@
 .section{
     position: relative;
-    top: 70px;
+    top: 80px;
 }
 
 .full-section{
